Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66161

qmlcachegen does not work with qtvirtualkeyboard

    XMLWordPrintable

Details

    Description

      The new qmlcachegen is not backwards compatible with existing QtQuickCompiler

      /home/sapiippo/development/build/qmlcachegen/qtvirtualkeyboard/src/virtualkeyboard/qmlcachegen_wrapper.sh --resource-file-mapping=/home/sapiippo/development/qt/qt5/qtvirtualkeyboard/src/virtualkeyboard/content/styles/default/default_style.qrc=/home/sapiippo/development/build/qmlcachegen/qtvirtualkeyboard/src/virtualkeyboard/content_styles_default_default_style_qmlcache.qrc --resource-file-mapping=/home/sapiippo/development/qt/qt5/qtvirtualkeyboard/src/virtualkeyboard/content/styles/retro/retro_style.qrc=/home/sapiippo/development/build/qmlcachegen/qtvirtualkeyboard/src/virtualkeyboard/content_styles_retro_retro_style_qmlcache.qrc --resource-file-mapping=/home/sapiippo/development/qt/qt5/qtvirtualkeyboard/src/virtualkeyboard/content/content.qrc --resource-file-mapping=/home/sapiippo/development/build/qmlcachegen/qtvirtualkeyboard/src/virtualkeyboard/layouts.qrc -o .qmlcache/qmlcache_loader.cpp /home/sapiippo/development/qt/qt5/qtvirtualkeyboard/src/virtualkeyboard/content/styles/default/default_style.qrc /home/sapiippo/development/qt/qt5/qtvirtualkeyboard/src/virtualkeyboard/content/styles/retro/retro_style.qrc /home/sapiippo/development/qt/qt5/qtvirtualkeyboard/src/virtualkeyboard/content/content.qrc layouts.qrc
      Too many input files specified: '/home/sapiippo/development/qt/qt5/qtvirtualkeyboard/src/virtualkeyboard/content/styles/default/default_style.qrc' '/home/sapiippo/development/qt/qt5/qtvirtualkeyboard/src/virtualkeyboard/content/styles/retro/retro_style.qrc' '/home/sapiippo/development/qt/qt5/qtvirtualkeyboard/src/virtualkeyboard/content/content.qrc' 'layouts.qrc'
      

      Attachments

        For Gerrit Dashboard: QTBUG-66161
        # Subject Branch Project Status CR V

        Activity

          People

            shausman Simon Hausmann
            sapiippo Samuli Piippo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes