Fix CONFIG+=qtquickcompiler with multiple resource files

Fix command line option handling to allow for processing of multiple
.qrc files as input files when generating the loader.cpp file.

Task-number: QTBUG-66161
Change-Id: I1ecd40bf863c6570ccf42846106791b7f53fe432
Reviewed-by: Samuli Piippo <samuli.piippo@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>